fixed white space in file upload form-control

--- a/src/scss/screen.scss
+++ b/src/scss/screen.scss
@@ -302,3 +302,7 @@ textarea.form-control {
 .branding-container h1 {
     display: inline-block;
 }
+
+.form-control[type=file] {
+    line-height: 1.5;
+}
